--- a/.github/workflows/ht_demo_cicd_pipeline.yml
+++ b/.github/workflows/ht_demo_cicd_pipeline.yml
@@ -44,6 +44,7 @@ jobs:
 
   deploy-to-prod:
     runs-on: ubuntu-latest
+    needs: deploy-to-dev
     environment: PROD
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
